
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_1__ ;


struct TYPE_8__ {int socket; TYPE_3__* sslHandle; int * sslContext; } ;
typedef TYPE_1__ connection ;
struct TYPE_9__ {int tlsext_heartbeat; } ;


 int ERR_print_errors_fp (int ) ;
 int SSL_CTX_SRP_CTX_init (int *) ;
 int SSL_CTX_check_private_key (int *) ;
 int * SSL_CTX_new (int ) ;
 int SSL_CTX_set_options (int *,int) ;
 int SSL_CTX_use_PrivateKey_file (int *,char*,int ) ;
 int SSL_CTX_use_certificate_file (int *,char*,int ) ;
 int SSL_FILETYPE_PEM ;
 int SSL_OP_ALL ;
 int SSL_OP_NO_SSLv2 ;
 int SSL_OP_NO_SSLv3 ;
 int SSL_TLSEXT_HB_DONT_SEND_REQUESTS ;
 int SSL_TLSEXT_HB_ENABLED ;
 int SSL_accept (TYPE_3__*) ;
 char* SSL_get_cipher (TYPE_3__*) ;
 TYPE_3__* SSL_new (int *) ;
 int SSL_read (TYPE_3__*,char*,int) ;
 int SSL_set_fd (TYPE_3__*,int) ;
 int SSLv23_server_method () ;
 int exit (int ) ;
 void* malloc (int) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int stderr ;

connection* tls_bind(int sd){
 int bytes;
        connection *c;
        char* buf;
 buf = malloc(4096);
        if(buf==((void*)0)){
                printf("[ error in malloc()\n");
                exit(0);
        }
 memset(buf,0,4096);
 c = malloc(sizeof(connection));
 if(c==((void*)0)){
                printf("[ error in malloc()\n");
                exit(0);
        }
 c->socket = sd;
        c->sslHandle = ((void*)0);
        c->sslContext = ((void*)0);
        c->sslContext = SSL_CTX_new(SSLv23_server_method());
        if(c->sslContext==((void*)0))
                ERR_print_errors_fp(stderr);
 SSL_CTX_set_options(c->sslContext, SSL_OP_ALL | SSL_OP_NO_SSLv2 | SSL_OP_NO_SSLv3);
 SSL_CTX_SRP_CTX_init(c->sslContext);
 SSL_CTX_use_certificate_file(c->sslContext, "./server.crt", SSL_FILETYPE_PEM);
 SSL_CTX_use_PrivateKey_file(c->sslContext, "./server.key", SSL_FILETYPE_PEM);
 if(!SSL_CTX_check_private_key(c->sslContext)){
  printf("[!] FATAL: private key does not match the certificate public key\n");
  exit(0);
 }
 c->sslHandle = SSL_new(c->sslContext);
        if(c->sslHandle==((void*)0))
                ERR_print_errors_fp(stderr);
        if(!SSL_set_fd(c->sslHandle,c->socket))
                ERR_print_errors_fp(stderr);
        int rc = SSL_accept(c->sslHandle);
 printf ("[ SSL connection using %s\n", SSL_get_cipher (c->sslHandle));
 bytes = SSL_read(c->sslHandle, buf, 4095);
 printf("[ recieved: %d bytes - showing output\n%s\n[\n",bytes,buf);
 if(!c->sslHandle->tlsext_heartbeat & SSL_TLSEXT_HB_ENABLED ||
                c->sslHandle->tlsext_heartbeat & SSL_TLSEXT_HB_DONT_SEND_REQUESTS){
                printf("[ warning: heartbeat extension is unsupported (try anyway)\n");
        }
        return c;
}
